--- a/print/Makefile
+++ b/print/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.269 2009/07/09 23:10:37 minskim Exp $
+# $NetBSD: Makefile,v 1.270 2009/07/10 00:16:46 minskim Exp $
 #
 
 COMMENT=	Desktop publishing
@@ -248,6 +248,8 @@ SUBDIR+=	tex-microtype-doc
 SUBDIR+=	tex-misc
 SUBDIR+=	tex-moreverb
 SUBDIR+=	tex-moreverb-doc
+SUBDIR+=	tex-ms
+SUBDIR+=	tex-ms-doc
 SUBDIR+=	tex-multirow
 SUBDIR+=	tex-multirow-doc
 SUBDIR+=	tex-musixtex
