--- a/print/Makefile
+++ b/print/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.272 2009/07/10 00:49:01 minskim Exp $
+# $NetBSD: Makefile,v 1.273 2009/07/10 00:51:38 minskim Exp $
 #
 
 COMMENT=	Desktop publishing
@@ -277,6 +277,7 @@ SUBDIR+=	tex-rotating-doc
 SUBDIR+=	tex-ruhyphen
 SUBDIR+=	tex-sectsty
 SUBDIR+=	tex-sectsty-doc
+SUBDIR+=	tex-setspace
 SUBDIR+=	tex-tools
 SUBDIR+=	tex-tools-doc
 SUBDIR+=	tex-ucs
