--- a/print/Makefile
+++ b/print/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.273 2009/07/10 00:51:38 minskim Exp $
+# $NetBSD: Makefile,v 1.274 2009/07/10 00:53:47 minskim Exp $
 #
 
 COMMENT=	Desktop publishing
@@ -280,6 +280,8 @@ SUBDIR+=	tex-sectsty-doc
 SUBDIR+=	tex-setspace
 SUBDIR+=	tex-tools
 SUBDIR+=	tex-tools-doc
+SUBDIR+=	tex-type1cm
+SUBDIR+=	tex-type1cm-doc
 SUBDIR+=	tex-ucs
 SUBDIR+=	tex-ukrhyph
 SUBDIR+=	tex-xkeyval
