--- a/graphics/p5-GD/Makefile
+++ b/graphics/p5-GD/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.40 2009/04/12 00:32:42 sno Exp $
+# $NetBSD: Makefile,v 1.41 2009/07/10 08:36:53 sno Exp $
 
-DISTNAME=	GD-2.41
+DISTNAME=	GD-2.43
 PKGNAME=	p5-${DISTNAME}
 SVR4_PKGNAME=	p5bd
 CATEGORIES=	graphics perl5
@@ -9,6 +9,7 @@ MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=GD/}
 MAINTAINER=	damon@brodiefamily.org
 HOMEPAGE=	http://theory.uwinnipeg.ca/CPAN/data/GD/GD.html
 COMMENT=	Perl5 interface to gd graphics library
+LICENSE=	artistic
 
 PKG_DESTDIR_SUPPORT=	user-destdir
 PKG_INSTALLATION_TYPES=	overwrite pkgviews
@@ -21,9 +22,8 @@ PERL5_PACKLIST=		auto/GD/.packlist
 PERL5_OPTIONS+=		threads
 
 MAKE_ENV+=		GD_LIBS=${LDFLAGS:Q}
-MAKE_PARAMS+=		-lib_gd_path=${BUILDLINK_PREFIX.gd}
+#MAKE_PARAMS+=		--lib_gd_path=${BUILDLINK_PREFIX.gd}
 
-.include "../../fonts/fontconfig/buildlink3.mk"
 .include "../../graphics/gd/buildlink3.mk"
 .include "../../lang/perl5/module.mk"
 .include "../../mk/bsd.pkg.mk"
