--- a/sysutils/gnome-power-manager/Makefile
+++ b/sysutils/gnome-power-manager/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.5 2009/02/24 15:14:01 wiz Exp $
+# $NetBSD: Makefile,v 1.6 2009/07/10 19:19:57 hasso Exp $
 #
 
 DISTNAME=	gnome-power-manager-2.24.4
@@ -25,6 +25,12 @@ CONFIGURE_ARGS+=	--enable-policykit
 CONFIGURE_ENV+=		ac_cv_path_DOCBOOK2MAN=no
 
 GCONF_SCHEMAS+=		gnome-power-manager.schemas
+
+.include "../../mk/bsd.prefs.mk"
+
+.if ${OPSYS} == "FreeBSD" || ${OPSYS} == "DragonFly"
+BUILDLINK_TRANSFORM+=   rm:-lresolv
+.endif
 
 .include "../../devel/GConf/schemas.mk"
 .include "../../devel/libgnomeui/buildlink3.mk"
