--- a/x11/qt4-libs/Makefile.common
+++ b/x11/qt4-libs/Makefile.common
@@ -1,9 +1,10 @@
-# $NetBSD: Makefile.common,v 1.13 2009/06/13 11:55:51 hasso Exp $
+# $NetBSD: Makefile.common,v 1.14 2009/07/10 19:30:15 abs Exp $
 # used by x11/qt4-libs/Makefile
 
 DISTNAME=	qt-x11-opensource-src-${QTVERSION}
 CATEGORIES=	x11
-MASTER_SITES=	ftp://ftp.qtsoftware.com/qt/source/
+MASTER_SITES=	http://get.qtsoftware.com/qt/source/ \
+		ftp://ftp.qtsoftware.com/qt/source/
 EXTRACT_SUFX=	.tar.bz2
 
 .include "../../x11/qt4/Makefile.common"
