--- a/devel/py-at-spi/Makefile
+++ b/devel/py-at-spi/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.9 2009/07/08 13:55:58 joerg Exp $
+# $NetBSD: Makefile,v 1.10 2009/07/10 22:22:39 abs Exp $
 #
 
 DISTNAME=		at-spi-1.26.0
@@ -15,7 +15,7 @@ PKG_DESTDIR_SUPPORT=	user-destdir
 
 NO_BUILD=	yes
 PY_PATCHPLIST=	yes
-PYTHON_VERSIONS_ACCEPTED=	25 24
+PYTHON_VERSIONS_ACCEPTED=	26 25 24
 
 PYATSPIDIR=		${PREFIX}/${PYSITELIB}/pyatspi
 INSTALLATION_DIRS=	${PYATSPIDIR}
