--- a/print/Makefile
+++ b/print/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.275 2009/07/10 23:24:49 minskim Exp $
+# $NetBSD: Makefile,v 1.276 2009/07/10 23:26:53 minskim Exp $
 #
 
 COMMENT=	Desktop publishing
@@ -286,6 +286,7 @@ SUBDIR+=	tex-type1cm-doc
 SUBDIR+=	tex-ucs
 SUBDIR+=	tex-ukrhyph
 SUBDIR+=	tex-xkeyval
+SUBDIR+=	tex-xkeyval-doc
 SUBDIR+=	tex-xunicode
 SUBDIR+=	tex-xunicode-doc
 #SUBDIR+=	texlive				# place holder directory
