--- a/print/Makefile
+++ b/print/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.276 2009/07/10 23:26:53 minskim Exp $
+# $NetBSD: Makefile,v 1.277 2009/07/10 23:47:06 minskim Exp $
 #
 
 COMMENT=	Desktop publishing
@@ -235,6 +235,7 @@ SUBDIR+=	tex-ifxetex-doc
 SUBDIR+=	tex-igo
 SUBDIR+=	tex-jadetex
 SUBDIR+=	tex-koma-script
+SUBDIR+=	tex-kotex
 SUBDIR+=	tex-lambda
 SUBDIR+=	tex-latex
 SUBDIR+=	tex-latexconfig
