--- a/print/Makefile
+++ b/print/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.279 2009/07/12 00:17:53 minskim Exp $
+# $NetBSD: Makefile,v 1.280 2009/07/12 02:18:48 minskim Exp $
 #
 
 COMMENT=	Desktop publishing
@@ -281,6 +281,8 @@ SUBDIR+=	tex-ruhyphen
 SUBDIR+=	tex-sectsty
 SUBDIR+=	tex-sectsty-doc
 SUBDIR+=	tex-setspace
+SUBDIR+=	tex-sttools
+SUBDIR+=	tex-sttools-doc
 SUBDIR+=	tex-tools
 SUBDIR+=	tex-tools-doc
 SUBDIR+=	tex-type1cm
