--- a/print/Makefile
+++ b/print/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.281 2009/07/12 02:21:15 minskim Exp $
+# $NetBSD: Makefile,v 1.282 2009/07/12 02:25:46 minskim Exp $
 #
 
 COMMENT=	Desktop publishing
@@ -285,6 +285,8 @@ SUBDIR+=	tex-sectsty-doc
 SUBDIR+=	tex-setspace
 SUBDIR+=	tex-sttools
 SUBDIR+=	tex-sttools-doc
+SUBDIR+=	tex-titlesec
+SUBDIR+=	tex-titlesec-doc
 SUBDIR+=	tex-tools
 SUBDIR+=	tex-tools-doc
 SUBDIR+=	tex-type1cm
