--- a/print/Makefile
+++ b/print/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.284 2009/07/12 02:57:27 minskim Exp $
+# $NetBSD: Makefile,v 1.285 2009/07/12 03:34:13 minskim Exp $
 #
 
 COMMENT=	Desktop publishing
@@ -181,6 +181,8 @@ SUBDIR+=	tex-fixme
 SUBDIR+=	tex-foiltex
 SUBDIR+=	tex-footmisc
 SUBDIR+=	tex-footmisc-doc
+SUBDIR+=	tex-geometry
+SUBDIR+=	tex-geometry-doc
 SUBDIR+=	tex-glossaries
 SUBDIR+=	tex-graphics
 SUBDIR+=	tex-graphics-doc
