--- a/emulators/stella/Makefile
+++ b/emulators/stella/Makefile
@@ -1,15 +1,15 @@
-# $NetBSD: Makefile,v 1.32 2008/06/20 01:09:18 joerg Exp $
+# $NetBSD: Makefile,v 1.33 2009/07/12 16:31:59 dholland Exp $
 
-STELLA_VERSION=	2.1
+STELLA_VERSION=	2.8.4
 DISTNAME=	stella-${STELLA_VERSION}-src
 PKGNAME=	stella-${STELLA_VERSION}
-PKGREVISION=	2
 CATEGORIES=	emulators
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=stella/}
 
 MAINTAINER=	dillo@NetBSD.org
 HOMEPAGE=	http://stella.sourceforge.net/
 COMMENT=	Multi-platform Atari 2600 VCS emulator
+LICENSE=	gnu-gpl-v2
 
 PKG_DESTDIR_SUPPORT=	user-destdir
 
@@ -26,6 +26,8 @@ CONFIGURE_ARGS+=	--prefix=${PREFIX:Q}
 GCC_REQD+=	3.0
 .endif
 
+.include "../../sysutils/desktop-file-utils/desktopdb.mk"
 .include "../../devel/SDL/buildlink3.mk"
+.include "../../devel/zlib/buildlink3.mk"
 .include "../../graphics/png/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
