--- a/devel/ruby-stream/Makefile
+++ b/devel/ruby-stream/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.3 2009/06/12 11:52:51 taca Exp $
+# $NetBSD: Makefile,v 1.4 2009/07/12 19:51:16 minskim Exp $
 
 DISTNAME=	stream-0.5
 PKGNAME=	${RUBY_PKGPREFIX}-${DISTNAME}
@@ -11,4 +11,8 @@ COMMENT=	Interface for external iterators
 LICENSE=	gnu-gpl-v2 # OR ruby-license
 
 .include "../../misc/rubygems/rubygem.mk"
+
+pre-configure:
+	${RM} ${WRKSRC}/Rakefile.orig
+
 .include "../../mk/bsd.pkg.mk"
