--- a/devel/semantic/Makefile
+++ b/devel/semantic/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.26 2008/10/13 08:07:02 uebayasi Exp $
+# $NetBSD: Makefile,v 1.27 2009/07/12 21:29:50 minskim Exp $
 #
 
 DISTNAME=	semantic-1.4.4
@@ -18,7 +18,7 @@ NO_CONFIGURE=	yes
 USE_TOOLS+=	gmake
 INFO_FILES=	yes
 
-MAKE_ENV+=	EMACS=${EMACS_FLAVOR:Q}
+MAKE_FLAGS+=	EMACS=${EMACS_BIN}
 
 # XXX cd ${WRKSRC}; ${MAKE} -V semantic_LISP
 SRCS=	semantic.el semantic-util.el semantic-bnf.el semantic-ctxt.el
