--- a/databases/pear-MDB2_Driver_sqlite/Makefile
+++ b/databases/pear-MDB2_Driver_sqlite/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.2 2009/01/19 20:14:16 abs Exp $
+# $NetBSD: Makefile,v 1.3 2009/07/13 14:48:36 joerg Exp $
 
 DISTNAME=	MDB2_Driver_sqlite-1.5.0b2
 CATEGORIES=	databases
@@ -6,6 +6,8 @@ CATEGORIES=	databases
 MAINTAINER=	adrianp@NetBSD.org
 HOMEPAGE=	http://pear.php.net/package/MDB2_Driver_sqlite
 COMMENT=	Sqlite MDB2 driver
+
+PHP_VERSIONS_ACCEPTED=	5
 
 DEPENDS+=       ${PHP_PKG_PREFIX}-sqlite-[0-9]*:../../databases/php-sqlite
 DEPENDS+=	${PHP_PKG_PREFIX}-pear-MDB2>=2.5:../../databases/pear-MDB2
