--- a/chat/irchat-pj/Makefile
+++ b/chat/irchat-pj/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.15 2008/10/11 09:31:54 uebayasi Exp $
+# $NetBSD: Makefile,v 1.16 2009/07/13 18:26:50 hasso Exp $
 
 DISTNAME=	irchat-pj-2.4.24.22
 PKGNAME=	${EMACS_PKGNAME_PREFIX}${DISTNAME}
-PKGREVISION=	1
+PKGREVISION=	2
 CATEGORIES=	chat
 MASTER_SITES=	http://his.luky.org/ftp/mirrors/irchat-pj/ \
 		http://gouketsu.net/irchat-pj/src/
