--- a/wm/sawfish/Makefile
+++ b/wm/sawfish/Makefile
@@ -1,38 +1,38 @@
-# $NetBSD: Makefile,v 1.49 2008/09/23 19:10:52 tnn Exp $
+# $NetBSD: Makefile,v 1.50 2009/07/14 10:33:28 tnn Exp $
 #
 
-DISTNAME=		sawfish-1.3.4
+DISTNAME=		sawfish-1.5.0
 CATEGORIES=		x11 wm
 MASTER_SITES=		${MASTER_SITE_SOURCEFORGE:=sawmill/}
+EXTRACT_SUFX=		.tar.bz2
 
 MAINTAINER=		tnn@NetBSD.org
 HOMEPAGE=		http://sawfish.wikia.com/
 COMMENT=		Extensible window manager that is fully configurable in Lisp
 
-DEPENDS+=		rep-gtk2>=0.18:../../x11/rep-gtk2
-
 CONFLICTS+=		sawfish-replibs-[0-9]*
 CONFLICTS+=		sawfish-themes-[0-9]*
 
-CONFIGURE_ENV+=		PKGLOCALEDIR=${PKGLOCALEDIR:Q}
-MAKE_ENV+=		PKGLOCALEDIR=${PKGLOCALEDIR:Q}
+PKG_DESTDIR_SUPPORT=	user-destdir
+
+CONFIGURE_ENV+=		PKGLOCALEDIR=${PKGLOCALEDIR}
+MAKE_ENV+=		PKGLOCALEDIR=${PKGLOCALEDIR}
 CONFIGURE_ENV+=		REP_ENV_PKGSRC=${REP_ENV_PKGSRC:Q}
 MAKE_ENV+=		REP_ENV_PKGSRC=${REP_ENV_PKGSRC:Q}
-GNU_CONFIGURE=		yes
-CONFIGURE_ARGS+=	--disable-themer
 
-PKG_DESTDIR_SUPPORT=	user-destdir
+GNU_CONFIGURE=		yes
+INFO_FILES=		YES
+PKGCONFIG_OVERRIDE+=	sawfish.pc.in
 USE_TOOLS+=		gmake makeinfo msgfmt pkg-config xgettext
+USE_TOOLS+=		gtar:run	# for librep run-time theme extraction
 USE_DIRS+=		gnome2-1.5
 USE_LIBTOOL=		yes
 USE_PKGLOCALEDIR=	yes
 
-INFO_FILES=		YES
-
 SUBST_CLASSES+=		env
 SUBST_STAGE.env=	pre-configure
 SUBST_FILES.env=	lisp/sawfish/ui/main.jl.in po/sawfish-xgettext
-SUBST_FILES.env+=	scripts/sawfish-*.jl* themer/themer.in
+SUBST_FILES.env+=	scripts/sawfish-*.jl*
 SUBST_SED.env=		-e 's,exec rep,exec env ${REP_ENV_PKGSRC} rep,g'
 
 .include "../../mk/bsd.prefs.mk"
@@ -43,10 +43,11 @@ REP_ENV_PKGSRC=		LD_PRELOAD=/usr/lib/libpthread.so
 REP_ENV_PKGSRC=
 .endif
 
-BUILDLINK_DEPMETHOD.libXt?=	build
-
 .include "../../audio/esound/buildlink3.mk"
 .include "../../lang/librep/buildlink3.mk"
+.include "../../sysutils/desktop-file-utils/desktopdb.mk"
 .include "../../x11/gtk2/buildlink3.mk"
+BUILDLINK_DEPMETHOD.libXt+=	build
 .include "../../x11/libXt/buildlink3.mk"
+.include "../../x11/rep-gtk2/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
